finish timeline and update data

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section id="about-me" class="container">
     <h2>Acerca de mí</h2>
-    <p>Ingeniero bilógico de la Universidad Nacional de Colombia, apasionado por las llamadas técnologías de la información, el software libre y la música; decidí cambiar mi quehacer profesional y dedicarme lo que realmente me gusta. (Crear parrafo creativo que no mencione los estudios)</p>
+    <p>Me gusta estar aprendiendo constantemente cosas nuevas por lo que por lo general me encuentro haciendo algún curso, viendo tutoriales o leyendo artículos. Para distraerme me gusta nadar, correr, montar en bicicleta, escuchar música o cantar. Dentro de mis intereses están la investigación, el audio digital, el DIY, entre otros.</p>
 
     <hr>
 
@@ -46,7 +46,7 @@
         </div>
         <div class="col-3">
           <img src="img/icons/icons8-música-100.png" alt="">
-            <p>Tecnologo en informática musical del Instituto Tecnológico metropolitano, con experiencia en investigación.</p>
+            <p>Tecnologo en informática musical del Instituto Tecnológico Metropolitano, con experiencia en investigación.</p>
         </div>
         <div class="col-3">
           <img src="img/icons/icons8-información-del-sistema-100.png" alt="">
@@ -94,6 +94,20 @@
 
     <div id="experience">
       <h3>Experiencia, colaboraciones y eventos académicos</h3>
+        <div id="timeline-options">
+          <div>
+            <input id="jobs-checkbox" name="job" type="checkbox" />
+            <label for="jobs">Empleos</label>
+          </div>
+          <div>
+            <input id="academics-checkbox" name="academic" type="checkbox" />
+            <label for="academics">Académico</label>
+          </div>
+          <div>
+            <input name="colaboration" type="checkbox" />
+            <label for="colaborations">Colaboraciones</label>
+          </div>
+        </div>
         <div id="timeline">
         </div>
     </div>
@@ -105,27 +119,27 @@
       <h2>Trabajos y Prácticas</h2>
       <div class="row">
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/latitudzero.jpg" alt="">
           <div class="portfolio-item-hover">
-            <p>Práctica</p>
-            <p>Clón de Netflix</p>
-            <a href="" class="btn btn-primary btn-rounded">Ver más</a>
+            <p>Trabajo</p>
+            <p>Latitud Zero</p>
+            <a href="http://www.latitudzero.com.co" class="btn btn-primary btn-rounded">Ver más</a>
           </div>
         </div>
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/pjamas1.jpg" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
-            <p>Clón de Netflix</p>
-            <a href="" class="btn btn-primary btn-rounded">Ver más</a>
+            <p>Pjamas layout</p>
+            <a href="https://ofmorenor.github.io/Photoshop-to-html-practice/index.html" class="btn btn-primary btn-rounded">Ver más</a>
           </div>
         </div>
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/netflix.jpg" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
             <p>Clón de Netflix</p>
-            <a href="" class="btn btn-primary btn-rounded">Ver más</a>
+            <a href="https://ofmorenor.github.io/netflix-landingpage-clone/" class="btn btn-primary btn-rounded">Ver más</a>
           </div>
         </div>
       </div>
@@ -151,11 +165,9 @@
           <img src="img/latitudzero.png" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
-            <p>Clón de Netflix</p>
-            <a href="" class="btn btn-primary btn-rounded">Ver más</a>
+            <p>Clón de Netflix</p> <a href="" class="btn btn-primary btn-rounded">Ver más</a>
           </div>
-        </div>
-      </div>
+        </div> </div>
 
     </div>
   </section>
@@ -164,11 +176,11 @@
     <div class="container">
       <h2>Contacto</h2>
       <ul>
-        <li><a href="#"><img src="img/icons/icons8-whatsapp-50.png" alt=""><span>319 253 81 94</span></a></li>
-        <li><img src="img/icons/icons8-comentarios-50.png" alt=""><a href="#"><span>ofmorenor@gmail.com</span></a></li>
-        <li><img src="img/icons/icons8-linkedin-50.png" alt=""><a href="#"><span>linkeding.com/in/ofmorenor</span></a></li>
-        <li><img src="img/icons/icons8-github-50.png" alt=""><a href="#"><span>github.com/ofmorenor</span></a></li>
-        <li><img src="img/icons/icons8-instagram-50.png" alt=""><a href="#"><span>instagram.com/ofmorenor</span></a></li>
+        <!-- <li><a href=""><img src="img/icons/icons8-whatsapp-50.png" alt=""><span>555 555 555 55</span></a></li> -->
+        <li><img src="img/icons/icons8-comentarios-50.png" alt=""><a href="mailto:ofmorenor@gmail.com"><span>ofmorenor@gmail.com</span></a></li>
+        <li><img src="img/icons/icons8-linkedin-50.png" alt=""><a href="https://www.linkedin.com/in/ofmorenor/"><span>linkeding.com/in/ofmorenor</span></a></li>
+        <li><img src="img/icons/icons8-github-50.png" alt=""><a href="https://github.com/ofmorenor"><span>github.com/ofmorenor</span></a></li>
+        <li><img src="img/icons/icons8-instagram-50.png" alt=""><a href="https://www.instagram.com/ofmorenor/"><span>instagram.com/ofmorenor</span></a></li>
       </ul>
     </div>
   </section>
