update aboutme and review spelling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section id="about-me" class="container">
     <h2>Acerca de mí</h2>
-    <p>Me gusta estar aprendiendo constantemente cosas nuevas por lo que por lo general me encuentro haciendo algún curso, viendo tutoriales o leyendo artículos. Para distraerme me gusta nadar, correr, montar en bicicleta, escuchar música o cantar. Dentro de mis intereses están la investigación, el audio digital, el DIY, entre otros.</p>
+    <p>Me considero una persona sencilla y respetuosa que le gusta enseñar a los demás y aprender de ellos. Me gusta estar aprendiendo constantemente cosas nuevas por lo que por lo general me encuentro haciendo algún curso, viendo tutoriales o leyendo artículos. Para distraerme me gusta nadar, correr, montar en bicicleta, escuchar música o cantar. Dentro de mis intereses están la investigación, el audio digital, el DIY, entre otros. </p>
 
     <hr>
 
