--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       <div class="row">
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/latitudzero.jpg" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
             <p>Clón de Netflix</p>
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/latitudzero.jpg" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
             <p>Clón de Netflix</p>
@@ -162,13 +162,12 @@
           </div>
         </div>
         <div class="portfolio-item">
-          <img src="img/latitudzero.png" alt="">
+          <img src="img/latitudzero.jpg" alt="">
           <div class="portfolio-item-hover">
             <p>Práctica</p>
             <p>Clón de Netflix</p> <a href="" class="btn btn-primary btn-rounded">Ver más</a>
           </div>
         </div> </div>
-
     </div>
   </section>
 
