--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     <div id="technologies">
       <h3>Tecnologías</h3>
+      <p>Estas son algunas tecnologías con las que he tenido contacto a lo largo de mi carrera.</p>
       <div class="row">
         <div class="col-3">
           <ul>
@@ -73,7 +74,7 @@
           <ul>
             <li><img src="img/icons/icons8-comprobado.png" alt=""><span>NodeJS</span></li>
             <li><img src="img/icons/icons8-comprobado.png" alt=""><span>ExpressJS</span></li>
-            <li><img src="img/icons/icons8-comprobado.png" alt=""><span>AngularJS</span></li>
+            <li><img src="img/icons/icons8-comprobado.png" alt=""><span>AngularJS / Angular</span></li>
             <li><img src="img/icons/icons8-comprobado.png" alt=""><span>C# / .NET / MVC5</span></li>
             <li><img src="img/icons/icons8-comprobado.png" alt=""><span>PHP</span></li>
           </ul>
